--- a/pricing.html
+++ b/pricing.html
@@ -1,58 +1,46 @@
 ---
-title: Pricing
-heading: Find the perfect plan for your business
-description: All plans include our award winning sales optimization solution to track your sales in real time.
+title: 價格
+heading: 找到符合你需求的方案
+description: 也可以詢問客服來了解適合您的方案
 pricing_table:
-  - name: Basic
+  - name: 公版
     color: "#8e8e8e"
     features:
-      - text: $25 per month
+      - text: 0元/月
         highlight: true
-      - text: Up to 5 users
-        highlight: false
-      - text: Basic lead scoring
-        highlight: false
-      - text: CRM
-        highlight: false
-      - text: Basic reporting
-        highlight: false
-      - text: Sales map
+      - text: 所有功能
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=basic
-      text: Get started
-  - name: Pro
+      text: 立即註冊
+  - name: 基礎
+    color: "#8e8e8e"
+    features:
+      - text: 800元/月
+        highlight: true
+      - text: 星星評分
+        highlight: false
+    call_to_action:
+      link: http://mysite.com?plan=basic
+      text: 立即詢問
+  - name: 進階
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: 1500元/月
         highlight: true
-      - text: Everything in Basic
+      - text: 所有基礎版的內容
         highlight: false
-      - text: Up to 25 users
-        highlight: false
-      - text: Advanced lead scoring
-        highlight: false
-      - text: Pipeline management
-        highlight: false
-      - text: Advanced reporting
+      - text: 會員積分制
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=pro
       text: Get started
-  - name: Professional
+  - name: 專業
     color: "#000000"
     features:
-      - text: $299 per month
+      - text: 聯絡客服人員
         highlight: true
-      - text: Everything in Basic and Pro
-        highlight: false
-      - text: Up to 100 users
-        highlight: false
-      - text: Campaign builder
-        highlight: false
-      - text: Machine learning
-        highlight: false
-      - text: Calendar
+      - text: 基礎版與進階版的所有功能
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=professional
